# ManaTranslator

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  app.py  pyproject.toml  requirements.txt
logs/: corpus_dataset.csv  translation_history.csv
manatranslator/: app.py
