[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manatranslator"
version = "0.1.0"
description = "An AI-powered Streamlit app that translates text from any language to Telugu, contributing to multilingual corpus collection."
authors = [
  { name = "Duvva S.N.Kusuma Haranadh and Team", email = "kusumaharnath2005@gmail.com" }
]
license = "AGPL-3.0-only"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
app = "https://huggingface.co/spaces/KusumaHaranadh/ManaTranslator"
repository = "https://github.com/Duvva-S-N-Kusuma-Haranadh/ManaTranslator"

[tool.setuptools]
packages = ["manatranslator"]
include-package-data = true

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.35.0"
gooletrans = "^4.0.0-rcl"
pandas = "^2.2.0"
langdetect = "^1.0.9"